fix: fit logo instead of covering parts

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -293,7 +293,6 @@ p > img {
     border-radius: 5px;
     width: 70px;
     height: 70px;
-    object-fit: cover;
   }
 }
 
